test/link/script-oob-org.out
error: Cannot set the current address to $4000: ROM0 ends at $3fff
    at script-oob-org.link(2)
error: Cannot set the current address to $4001: ROM0 ends at $3fff
    at script-oob-org.link(3)
error: Cannot decrease the current address (from $4000 to $3fff)
    at script-oob-org.link(6)
error: Cannot set the current address to $8000: ROMX ends at $7fff
    at script-oob-org.link(7)
error: Cannot set the current address to $8001: ROMX ends at $7fff
    at script-oob-org.link(8)
error: Cannot decrease the current address (from $ff80 to $0000)
    at script-oob-org.link(11)
error: Cannot decrease the current address (from $ff80 to $ff7f)
    at script-oob-org.link(12)
error: Cannot set the current address to $ffff: HRAM ends at $fffe
    at script-oob-org.link(14)
error: Cannot set the current address to $10000: HRAM ends at $fffe
    at script-oob-org.link(15)
Linking failed with 9 errors
